Fix network cleaning with turn restrictions (#289)
* Bump matsim from 2024.0 to 2025.0-2025w07

* Set Java to 21

* Set source encoding to UTF-8

* Clean network from invalid DisallowedNextLinks (#263)

* Bump matsim from 2025.0-2025w07 to 2025.0-2025w08

* Clean network from invalid DisallowedNextLinks

* Adjust test vectors

* Revert "Set Java to 21"

This reverts commit 2bcd989e0eb26395f066411a2991939b4d55a3d2.

* Revert "Set source encoding to UTF-8"

This reverts commit 35f707239878ed8828c2efe17e6d43acf60873dc.

* Bump Java from 17 to 21

* Bump matsim from 2025.0-2025w08 to 2025.0

* Switch RoutableSubnetworkParams to new parameter notation

* Fix copying of turn restriction attributes

* Bump matsim from 2025.0 to 2026.0-PR3933

* Bump matsim from 2025.0 to 2026.0-2025w20

Bump matsim from 2025.0-2025w20 to 2025.0-PR3945

* Consider pt when parsing turn restrictions and all pt modes are excluded

* Add trolleybus to OSM2MATSim modes

* Clean converted subnetworks with turn restrictions

* Bump matsim from 2026.0-PR3945 to 2026.0-PR3956

* Remove debug output